--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple React App",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Poirier",
