--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mike Poirier",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.12.0",
     "express": "^4.13.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
