--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
+    "webpackWatch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mike Poirier",
